# AdventOfCode

./: .gitignore  CMakeLists.txt  aoc_tools.hpp  getaoc.sh  run.sh
2022/d1/: 1.py
2022/d10/: 10.py
2022/d11/: 11.py
2022/d12/: 12.py
2022/d13/: 13.py
2022/d14/: 14.py
2022/d15/: 15.py
2022/d16/: 16.py
2022/d18/: 18.py
2022/d19/: 19.py
2022/d2/: 2.py
2022/d20/: 20.py
2022/d21/: 21.py
2022/d23/: 23.py
2022/d24/: 24.py
2022/d25/: 25.py
2022/d3/: 3.py
2022/d4/: 4.py
2022/d5/: 5.py
2022/d6/: 6.py
2022/d7/: 7.py  7tree.py
2022/d8/: 8.py  8b.py
2022/d9/: 9.py
AdventOfCode2019/: Day1.cc  Day10.cc  Day12.cc  Day14.cc  Day16.cc  Day2.cc  Day3.cc  Day3Antonio.cc  Day4.cc  Day5.cc  Day6.cc  Day7.cc  Day8.cc  Day9.cc  day5OOP.cc
AoC15/d1/: 1.py
AoC15/d10/: 10.py
AoC15/d11/: 11.py
AoC15/d12/: 12.py
AoC15/d13/: 13.py
AoC15/d14/: 14.py
AoC15/d15/: 15.py
AoC15/d16/: 16.py
AoC15/d17/: 17.py
AoC15/d18/: 18.py
AoC15/d19/: 19.py
AoC15/d2/: 2.py
AoC15/d20/: 20.py
AoC15/d21/: 21.py
AoC15/d22/: 22.py
AoC15/d23/: 23.py
AoC15/d24/: 24.py
AoC15/d25/: 25.py
AoC15/d3/: 3.py
AoC15/d4/: 4.py
AoC15/d5/: 5.py
AoC15/d6/: '  6.py
AoC15/d7/: 7.py
AoC15/d8/: 8.py
AoC15/d9/: 9.py
AoC16/d1/: 1.py
AoC16/d2/: 2.py
AoC16/d3/: 3.py
AoC16/d4/: 4.py
AoC16/d5/: 5.py
AoC16/d6/: 6.py
AoC16/d7/: 7.py  i2
AoC16/d8/: 8.py
AoC17/d1/: d1.cc
AoC17/d10/: d10.cc
AoC17/d11/: d11.cc
AoC17/d12/: d12.cc
AoC17/d13/: d13.cc
AoC17/d14/: d14.cc
AoC17/d19/: d19.cc
AoC17/d2/: d2.cc
AoC17/d20/: d20.cc
AoC17/d22/: d22.cc
AoC17/d23/: d23p2.cc
AoC17/d24/: d24.cc
AoC17/d25/: d25.cc
AoC17/d3/: d3.cc
AoC17/d4/: d4.cc
AoC17/d5/: d5.cc
AoC17/d6/: d6.cc
AoC17/d7/: d7.cc
AoC17/d8/: d8.cc
AoC17/d9/: d9.cc
AoC18/d1/: 1.cc  a.out
AoC18/d10/: 9.cc  a.out
AoC18/d11/: 11.cc  a.out
AoC18/d12/: 12.cc  a.out
AoC18/d13/: 13.cc  a.out
AoC18/d14/: 14.cc  a.out
AoC18/d17/: 17.cc
AoC18/d18/: 18.cc
AoC18/d2/: 2.cc  a.out
AoC18/d3/: 3.cc  a.out
AoC18/d5/: 5.cc  a.out  i1  (+2 more)
AoC21/: 25.py
AoC24/: CMakeLists.txt  main.cpp
AoC24/benchmarks/: benchmarks.cpp
AoC24/day1/: day1.cpp
AoC24/day2/: day2.cpp
AoC25/: CMakeLists.txt  main.cpp
AoC25/day1/: day1.cpp
AoC25/day2/: day2.cpp
d20/: 20.py
tools/: CMakeLists.txt  aoc_tools.hpp
(+74 files in other folders)
